# LeagueOfLegendsDataLab

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  analysis.ipynb  pyproject.toml  requirements.txt  settings.py
code/: .env  example.env  execute.py  extract_stats.py  lol_data_pipeline.py  lol_data_processing.py  settings.py
code/docs/: champion.json  champions.json  item.json  items.json  languages.json  mastery.json  profile_icon.json  runes.json  summoner_spells.json
code/extract/: comp_analyzer.py  runes_stats.py
code/extract_lib/: comp_analyzer.py
code/libs/extract_lib/: comp_analyzer.py  stats.py
code/libs/riot_lib/: riot.py
code/libs/sql_lib/: sql.py
code/riot_lib/: riot.py
code/sql_lib/: sql.py
docs/: champion.json  item.json  language.json  map.json  mastery.json  match.json  profile_icon.json  rune.json  rune_reforged.json  summoner_spells.json
libs/extract_lib/: comp_analyzer.py  stats.py
libs/log_lib/: log.py
libs/riot_lib/: riot.py
libs/sql_lib/: sql.py
project/: extract_stats.py  lol_data_manager.py  lol_data_pipeline.py  lol_data_processing.py
queries/: create_table.sql  drop_table.sql  get_data.sql  insert_data.sql  table_information.sql  update_data.sql  upsert_data.sql
